# pysettrie

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
settrie/: settrie.pyx
tests/: test_settrie.py
