[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
[project]
name = "pysettrie"
version = "1.0.3"
authors = [
  { name="Gregory Morse", email="gregory.morse@live.com" },
  { name="Márton Miháltz", email="mihaltz.marton@nytud.mta.hu" }
]
description = "pysettrie package"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GregoryMorse/pysettrie"
Issues = "https://github.com/GregoryMorse/pysettrie/issues"

# ---------------------------------------------------------------------------
# cibuildwheel — used by .github/workflows/wheels.yml
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# CPython 3.10–3.13 only; PyPy excluded (cp* prefix already excludes pp*)
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests/ -v"

[tool.cibuildwheel.linux]
# Builds manylinux AND musllinux wheels for each arch automatically
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]